src/objects/CLM_RequiredFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DependentCombination__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DependentCombination</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentCondition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DependentCondition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentField__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DependentField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DependentValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FieldLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ObjectAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type of Request</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>CLM_RequiredFields</label>
</CustomObject>